<resources>
    <string name="app_name">TestHelper</string>
    <string name="empty" />

    <string name="name">Name</string>
    <string name="summary">Summary</string>
    <string name="precondition">Precondition</string>
    <string name="actual_result">Actual Result</string>
    <string name="expected_result">Expected Result</string>
    <string name="bug_report">Bug Report</string>
    <string name="send">Send</string>
    <string name="priority">Priority</string>
    <string name="high">High</string>
    <string name="steps">Steps</string>
    <string name="change_step">Change step</string>
    <string name="step">Step</string>
    <string name="clear_all">Clear all</string>
    <string name="add_step">Add step</string>
    <string name="issue_created">Issue with title %1$s created.</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="field_can_not_empty">Field can not be empty</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="new_note">New note(optional)</string>
    <string name="settings">Settings</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>

    <string name="user_name">Name</string>
    <string name="repository">Repository</string>
    <string name="profile">Profile</string>
    <string name="choose_repository">Choose repository</string>
    <string name="select_repository">Please, select your work repository</string>
    <string name="provide_repo_name">Provide repository name</string>

</resources>
