<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_contact_info"
                style="@style/ProfileCardViewStyle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile"
                        android:textColor="@color/text_secondary"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_marginTop="16dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_bug_report"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_profile"
                        tools:ignore="ContentDescription" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:maxLines="1"
                        android:text="@string/login"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@+id/tv_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@id/iv_avatar"
                        app:layout_constraintTop_toBottomOf="@id/tv_profile"
                        tools:text="JohnAppleseedItis" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/user_name"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@id/iv_avatar"
                        app:layout_constraintTop_toBottomOf="@id/tv_username"
                        tools:text="FirstName" />

                    <TextView
                        android:id="@+id/tv_sign_in"
                        style="@style/TextAppearance.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/sign_in"
                        android:textColor="@color/s_primary_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_profile" />

                    <androidx.constraintlayout.widget.Group
                        android:id="@+id/group_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:constraint_referenced_ids="tv_name, tv_username, iv_avatar"
                        tools:visibility="visible" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_repo"
                style="@style/ProfileCardViewStyle"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/choose_repository"
                        android:textColor="@color/text_secondary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_repo_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/select_repository"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/btn_sign_out"
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:text="@string/sign_out"
                android:textColor="@color/s_primary_text"
                android:textSize="16sp"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.core.widget.NestedScrollView>